--- a/frontend/index.html
+++ b/frontend/index.html
@@ -271,9 +271,7 @@
     </div>
     
     <script>
-        const API_URL = window.location.hostname === 'localhost' 
-            ? 'http://localhost:3000' 
-            : '/api';
+        const API_URL = '';
         
         function formatPrice(price, currency = '$') {
             return currency + price.toLocaleString('en-US', { 
